--- a/addons/candidate_record/views/candidate_record_view.xml
+++ b/addons/candidate_record/views/candidate_record_view.xml
@@ -14,7 +14,7 @@
                 <field name="education" />
                 <field name="skills" />
                 <field name="full_time" width="1"/>
-                <field name="not_full_time" />
+                <!-- <field name="not_full_time" /> -->
             </search>
         </field>
     </record>
@@ -32,7 +32,7 @@
                 <field name="education" />
                 <field name="skills" />
                 <field name="full_time" width="1"/>
-                <field name="not_full_time" />
+                <!-- <field name="not_full_time" /> -->
             </tree>
         </field>
     </record>
@@ -55,7 +55,7 @@
                             <field name="education" />
                             <field name="skills" />
                             <field name="full_time" />
-                            <field name="not_full_time" />
+                            <!-- <field name="not_full_time" /> -->
                         </group>  
                     </group>
                 </sheet>
@@ -72,6 +72,7 @@
     <menuitem
         id="candidate_record_root_menu"
         name="Candidate Record "
+        web_icon="candidate_record,static/description/icon.png"
         sequence="10"/>
         <menuitem
             id="candidate_record_sub_menu"
