--- a/addons/a3_a4/views/improvement_view.xml
+++ b/addons/a3_a4/views/improvement_view.xml
@@ -5,7 +5,7 @@
         <field name="name">improvement_suggestion.view.form</field>
         <field name="model">improvement.suggestion</field>
         <field name="arch" type="xml">
-            <form string="">
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    <form>
                 <header>
                     <button name="add" class="oe_highlight" string="Add" type="object" data-hotkey="a" states="draft" />
                     <button name="approve" string="Approve" type="object" data-hotkey="p" states="add" />
@@ -31,108 +31,104 @@
                         <field name="dh_email" />
                     </group>
                     <div class="w-auto mb-2">
-                        <h2 class="fw-bold bg-primary text-white">A. IMPROVEMENT THEME</h2>
+                        <h4 class="fw-bold bg-primary text-white">A. IMPROVEMENT THEME</h4>
                         <field name="improvement_theme" nolabel="1" />
-                    </div>
-                    <div class="w-auto mb-2">
-                        <h2 class="fw-bold bg-primary text-white">B. CURRENT CONDITION ANALYZE</h2>
+                    
+                        <h4 class="fw-bold bg-primary text-white">B. CURRENT CONDITION ANALYZE</h4>
                         <field name="cur_con_analyze" nolabel="1"/>
-                    </div>
-                    <div class="w-auto mb-2">
-                        <h2 class="fw-bold bg-primary text-white">C. IMPROVEMENT SUGGESTION</h2>
+                   
+                        <h4 class="fw-bold bg-primary text-white">C. IMPROVEMENT SUGGESTION</h4>
                         <field name="improvement_suggestion" nolabel="1" />
                     </div>
-                    <!-- <group>   -->
-                        <h2 class="w-auto mb-2 fw-bold bg-primary text-white">D. IMPROVEMENT SUGGESTION OBJECTIVE</h2>
-                        <div class="row">
-                            <div class="col">
-                                <h1>SQCDM</h1>
-                                <ul class="list-inline"> 
-                                    <li>                                        
-                                        <field name="safety_healthy" />
-                                        <b>Safety/Healthy</b>
-                                    </li>
-                                    <li>
-                                        <field name="quality" />
-                                        <b>Quality (next process/customer satisfaction)</b>
-                                    </li>
-                                    <li>
-                                        <field name="cost_budget" />
-                                        <b>Cost Budget</b>
-                                    </li>
-                                    <li>
-                                        <field name="delivery" />
-                                        <b>Delivery (next process/customer send on time)</b>
-                                    </li>
-                                    <li>
-                                       <field name="morality" />
-                                       <b>Morality/Good Habit</b>
-                                    </li>
-                                </ul>                                
-                            </div>
-                            <div class="col">
-                                <h1>4M+EI</h1>
-                                <ul class="list-inline">
-                                    <li>                                        
-                                        <field name="man_people" />
-                                        <b>Man/People</b>
-                                    </li>
-                                    <li>
-                                        <field name="machine" />
-                                        <b>Machine/Equipment/Tools</b>
-                                    </li>
-                                    <li>
-                                        <field name="method" />
-                                        <b>Method/Process(SOP)</b>
-                                    </li>
-                                    <li>
-                                        <field name="material" />
-                                        <b>Material/Parts</b>
-                                    </li>
-                                    <li>
-                                       <field name="environment" />
-                                       <b>Envirenment</b>
-                                    </li>
-                                     <li>
-                                       <field name="information" />
-                                       <b>Information</b>
-                                    </li>
-                                </ul>                   
-                            </div>
-                            <div class="col">
-                                <h1>5S</h1>
-                                <ul class="list-inline">
-                                    <li>                                        
-                                        <field name="sort" />
-                                        <b>Sort (Separating needed and unneeded)</b>
-                                    </li>
-                                    <li>
-                                        <field name="set_in_order" />
-                                        <b>Set in Order (Keep well and easy to retrieval) </b>
-                                    </li>
-                                    <li>
-                                        <field name="shine" />
-                                        <b>Shine (Neat and Clean)</b>
-                                    </li>
-                                    <li>
-                                         <field name="standardize" />
-                                        <b>standardize (Standard for 3S above)</b>
-                                    </li>
-                                    <li>
-                                       <field name="sustain" />
-                                       <b>Sustain (Do it and maintain with discipline)</b>
-                                    </li>
-                                </ul>
-                            </div>
+                    
+                    <h4 class="w-auto mb-2 fw-bold bg-primary text-white">D. IMPROVEMENT SUGGESTION OBJECTIVE</h4>
+                    <div class="row">
+                        <div class="col">
+                            <h4>SQCDM</h4>
+                            <ul class="list-inline"> 
+                                <li>                                        
+                                    <field name="safety_healthy" />
+                                    <b>Safety/Healthy</b>
+                                </li>
+                                <li>
+                                    <field name="quality" />
+                                    <b>Quality (next process/customer satisfaction)</b>
+                                </li>
+                                <li>
+                                    <field name="cost_budget" />
+                                    <b>Cost Budget</b>
+                                </li>
+                                <li>
+                                    <field name="delivery" />
+                                    <b>Delivery (next process/customer send on time)</b>
+                                </li>
+                                <li>
+                                    <field name="morality" />
+                                    <b>Morality/Good Habit</b>
+                                </li>
+                            </ul>                                
                         </div>
-                    <!-- </group> -->
-                    <div class="w-auto mb-2">
-                        <h2 class="fw-bold bg-primary text-white">E. IMPROVEMENT SCOPE</h2>
-                        <field name="improvement_scope" widget="radio" nolabel="1" />
-                    </div>                      
-                    <div class="w-auto mb-2">
-                        <h2 class="fw-bold bg-primary text-white">F. VISUAL CONDITION</h2>
+                        <div class="col">
+                            <h4>4M+EI</h4>
+                            <ul class="list-inline">
+                                <li>                                        
+                                    <field name="man_people" />
+                                    <b>Man/People</b>
+                                </li>
+                                <li>
+                                    <field name="machine" />
+                                    <b>Machine/Equipment/Tools</b>
+                                </li>
+                                <li>
+                                    <field name="method" />
+                                    <b>Method/Process(SOP)</b>
+                                </li>
+                                <li>
+                                    <field name="material" />
+                                    <b>Material/Parts</b>
+                                </li>
+                                <li>
+                                    <field name="environment" />
+                                    <b>Envirenment</b>
+                                </li>
+                                    <li>
+                                    <field name="information" />
+                                    <b>Information</b>
+                                </li>
+                            </ul>                   
+                        </div>
+                        <div class="col">
+                            <h4>5S</h4>
+                            <ul class="list-inline">
+                                <li>                                        
+                                    <field name="sort" />
+                                    <b>Sort (Separating needed and unneeded)</b>
+                                </li>
+                                <li>
+                                    <field name="set_in_order" />
+                                    <b>Set in Order (Keep well and easy to retrieval) </b>
+                                </li>
+                                <li>
+                                    <field name="shine" />
+                                    <b>Shine (Neat and Clean)</b>
+                                </li>
+                                <li>
+                                        <field name="standardize" />
+                                    <b>standardize (Standard for 3S above)</b>
+                                </li>
+                                <li>
+                                    <field name="sustain" />
+                                    <b>Sustain (Do it and maintain with discipline)</b>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
+                    
+                    <h4 class="w-auto mb-2 fw-bold bg-primary text-white">E. IMPROVEMENT SCOPE</h4>
+                    <div>
+                        <field name="improvement_scope" widget="radio" options="{'horizontal': true}" nolabel="1" />
+                    </div>
+                    <h4 class="fw-bold bg-primary text-white">F. VISUAL CONDITION</h4>
                     <group>
                         <group>
                             <field name="before" widget="image" />
@@ -141,14 +137,13 @@
                             <field name="after" widget="image" />
                         </group>
                     </group>
-                    <div class="w-auto mb-2">
-                        <h2 class="fw-bold bg-primary text-white">G. DELIVERABLES</h2>
-                        <field name="deliverables" nolabel="1" />
-                    </div>
-                    <div class="w-auto mb-2">
-                        <h2 class="fw-bold bg-primary text-white">H. NEXT IMPROVEMENT PLAN</h2>
-                        <field name="next_improve_plan" nolabel="1" />
-                    </div>                                                
+
+                    <h4 class="w-auto mb-2 fw-bold bg-primary text-white">G. DELIVERABLES</h4>
+                    <div> <field name="deliverables" nolabel="1" /> </div>
+
+                    <h4 class="w-auto mb-2 fw-bold bg-primary text-white">H. NEXT IMPROVEMENT PLAN</h4>
+                    <field name="next_improve_plan" nolabel="1" />
+
                     <group>
                         <field name="create_id" />
                         <field name="create_date" />
